<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ProfileFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/picture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:civ_border_color="#FF000000"
        android:layout_margin="10dp"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_name_text_input_layout"
        android:layout_width="0dp"
        android:layout_margin="5dp"
        app:boxBackgroundColor="@android:color/transparent"
        android:background="@android:color/transparent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/picture"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_baseline_edit_24">

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/first_name"
            android:inputType="textCapWords"
            android:maxLength="30"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/last_name_text_input_layout"
        android:layout_width="0dp"
        android:layout_margin="5dp"
        app:boxBackgroundColor="@android:color/transparent"
        android:background="@android:color/transparent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/picture"
        app:layout_constraintTop_toBottomOf="@+id/first_name_text_input_layout"
        app:startIconDrawable="@drawable/ic_baseline_edit_24">

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:maxLength="30"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/job_text_input_layout"
        android:layout_width="0dp"
        android:layout_margin="5dp"
        app:boxBackgroundColor="@android:color/transparent"
        android:background="@android:color/transparent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/picture"
        app:layout_constraintTop_toBottomOf="@+id/last_name_text_input_layout"
        app:startIconDrawable="@drawable/ic_baseline_edit_24">

        <EditText
            android:id="@+id/job"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/job"
            android:inputType="textCapWords"
            android:maxLength="30"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:gravity="center|top"
        android:hint="@string/description"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/save_profile_button"
        android:maxLength="200"
        app:boxBackgroundColor="@android:color/transparent"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/job_text_input_layout">

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:hint="@string/description"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/save_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/save"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>